@@ -35,7 +35,7 @@ import org.gjt.sp.jedit.OperatingSystem;
 
 /**
  * @author Slava Pestov
- * @version $Id: VFSFileNameField.java,v 1.15 2003/06/22 21:23:33 spestov Exp $
+ * @version $Id: VFSFileNameField.java,v 1.16 2003/09/10 02:23:12 spestov Exp $
  * @since jEdit 4.2pre1
  */
 class VFSFileNameField extends HistoryTextField
@@ -190,9 +190,18 @@ class VFSFileNameField extends HistoryTextField
 
 				BrowserView view = browser.getBrowserView();
 				view.selectNone();
+
+				int mode = browser.getMode();
+				// fix for bug #765507
+				// we don't type complete in save dialog
+				// boxes. Press TAB to do an explicit
+				// complete
 				view.getTable().doTypeSelect(path,
-					browser.getMode() == VFSBrowser
-					.CHOOSE_DIRECTORY_DIALOG);
+					mode == VFSBrowser
+					.CHOOSE_DIRECTORY_DIALOG
+					||
+					mode == VFSBrowser
+					.SAVE_DIALOG);
 			}
 			else
 				super.processKeyEvent(evt);
